exports[`Autocomplete [common] example testing should match snapshot(s) for 1.basic 1`] = `
<DropMenu
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control
    onClick={[Function]}>
    <div
      className="lucid-Autocomplete-Control">
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={false}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option>
    Portland
  </DropMenu.Option>
  <DropMenu.Option>
    pinky and the brain
  </DropMenu.Option>
  <DropMenu.Option>
    playa please
  </DropMenu.Option>
  <DropMenu.Option>
    porridge
  </DropMenu.Option>
  <DropMenu.Option>
    portal
  </DropMenu.Option>
  <DropMenu.Option>
    potent potables
  </DropMenu.Option>
  <DropMenu.Option>
    potent
  </DropMenu.Option>
</DropMenu>
`;

exports[`Autocomplete [common] example testing should match snapshot(s) for 2.interactive 1`] = `
<DropMenu
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control
    onClick={[Function]}>
    <div
      className="lucid-Autocomplete-Control">
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={false}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option>
    abaft
  </DropMenu.Option>
  <DropMenu.Option>
    abounding
  </DropMenu.Option>
  <DropMenu.Option>
    abrasive
  </DropMenu.Option>
  <DropMenu.Option>
    accidental
  </DropMenu.Option>
  <DropMenu.Option>
    actor
  </DropMenu.Option>
  <DropMenu.Option>
    addition
  </DropMenu.Option>
  <DropMenu.Option>
    adhesive
  </DropMenu.Option>
  <DropMenu.Option>
    adjustment
  </DropMenu.Option>
  <DropMenu.Option>
    advertisement
  </DropMenu.Option>
  <DropMenu.Option>
    applaud
  </DropMenu.Option>
  <DropMenu.Option>
    appreciate
  </DropMenu.Option>
  <DropMenu.Option>
    awesome
  </DropMenu.Option>
  <DropMenu.Option>
    ball
  </DropMenu.Option>
  <DropMenu.Option>
    beautiful
  </DropMenu.Option>
  <DropMenu.Option>
    beef
  </DropMenu.Option>
  <DropMenu.Option>
    bell
  </DropMenu.Option>
  <DropMenu.Option>
    bent
  </DropMenu.Option>
  <DropMenu.Option>
    bite-sized
  </DropMenu.Option>
  <DropMenu.Option>
    bitter
  </DropMenu.Option>
  <DropMenu.Option>
    black
  </DropMenu.Option>
  <DropMenu.Option>
    bloody
  </DropMenu.Option>
  <DropMenu.Option>
    bulb
  </DropMenu.Option>
  <DropMenu.Option>
    bump
  </DropMenu.Option>
  <DropMenu.Option>
    calculator
  </DropMenu.Option>
  <DropMenu.Option>
    camp
  </DropMenu.Option>
  <DropMenu.Option>
    care
  </DropMenu.Option>
  <DropMenu.Option>
    care
  </DropMenu.Option>
  <DropMenu.Option>
    caring
  </DropMenu.Option>
  <DropMenu.Option>
    celery
  </DropMenu.Option>
  <DropMenu.Option>
    challenge
  </DropMenu.Option>
  <DropMenu.Option>
    chase
  </DropMenu.Option>
  <DropMenu.Option>
    cherries
  </DropMenu.Option>
  <DropMenu.Option>
    chew
  </DropMenu.Option>
  <DropMenu.Option>
    choke
  </DropMenu.Option>
  <DropMenu.Option>
    circle
  </DropMenu.Option>
  <DropMenu.Option>
    clean
  </DropMenu.Option>
  <DropMenu.Option>
    club
  </DropMenu.Option>
  <DropMenu.Option>
    coat
  </DropMenu.Option>
  <DropMenu.Option>
    cold
  </DropMenu.Option>
  <DropMenu.Option>
    colossal
  </DropMenu.Option>
  <DropMenu.Option>
    command
  </DropMenu.Option>
  <DropMenu.Option>
    competition
  </DropMenu.Option>
  <DropMenu.Option>
    confuse
  </DropMenu.Option>
  <DropMenu.Option>
    continue
  </DropMenu.Option>
  <DropMenu.Option>
    crawl
  </DropMenu.Option>
  <DropMenu.Option>
    curve
  </DropMenu.Option>
  <DropMenu.Option>
    cute
  </DropMenu.Option>
  <DropMenu.Option>
    dad
  </DropMenu.Option>
  <DropMenu.Option>
    damaged
  </DropMenu.Option>
  <DropMenu.Option>
    death
  </DropMenu.Option>
  <DropMenu.Option>
    debonair
  </DropMenu.Option>
  <DropMenu.Option>
    decorate
  </DropMenu.Option>
  <DropMenu.Option>
    deeply
  </DropMenu.Option>
  <DropMenu.Option>
    delicious
  </DropMenu.Option>
  <DropMenu.Option>
    destroy
  </DropMenu.Option>
  <DropMenu.Option>
    destruction
  </DropMenu.Option>
  <DropMenu.Option>
    diligent
  </DropMenu.Option>
  <DropMenu.Option>
    disapprove
  </DropMenu.Option>
  <DropMenu.Option>
    discussion
  </DropMenu.Option>
  <DropMenu.Option>
    doubtful
  </DropMenu.Option>
  <DropMenu.Option>
    dress
  </DropMenu.Option>
  <DropMenu.Option>
    drop
  </DropMenu.Option>
  <DropMenu.Option>
    dust
  </DropMenu.Option>
  <DropMenu.Option>
    eatable
  </DropMenu.Option>
  <DropMenu.Option>
    educate
  </DropMenu.Option>
  <DropMenu.Option>
    efficacious
  </DropMenu.Option>
  <DropMenu.Option>
    elegant
  </DropMenu.Option>
  <DropMenu.Option>
    elfin
  </DropMenu.Option>
  <DropMenu.Option>
    embarrassed
  </DropMenu.Option>
  <DropMenu.Option>
    enjoy
  </DropMenu.Option>
  <DropMenu.Option>
    envious
  </DropMenu.Option>
  <DropMenu.Option>
    exchange
  </DropMenu.Option>
  <DropMenu.Option>
    excited
  </DropMenu.Option>
  <DropMenu.Option>
    existence
  </DropMenu.Option>
  <DropMenu.Option>
    fast
  </DropMenu.Option>
  <DropMenu.Option>
    fear
  </DropMenu.Option>
  <DropMenu.Option>
    flight
  </DropMenu.Option>
  <DropMenu.Option>
    float
  </DropMenu.Option>
  <DropMenu.Option>
    food
  </DropMenu.Option>
  <DropMenu.Option>
    force
  </DropMenu.Option>
  <DropMenu.Option>
    fork
  </DropMenu.Option>
  <DropMenu.Option>
    frightening
  </DropMenu.Option>
  <DropMenu.Option>
    geese
  </DropMenu.Option>
  <DropMenu.Option>
    ghost
  </DropMenu.Option>
  <DropMenu.Option>
    giant
  </DropMenu.Option>
  <DropMenu.Option>
    gigantic
  </DropMenu.Option>
  <DropMenu.Option>
    glow
  </DropMenu.Option>
  <DropMenu.Option>
    goofy
  </DropMenu.Option>
  <DropMenu.Option>
    grandiose
  </DropMenu.Option>
  <DropMenu.Option>
    great
  </DropMenu.Option>
  <DropMenu.Option>
    grumpy
  </DropMenu.Option>
  <DropMenu.Option>
    guide
  </DropMenu.Option>
  <DropMenu.Option>
    hair
  </DropMenu.Option>
  <DropMenu.Option>
    hall
  </DropMenu.Option>
  <DropMenu.Option>
    head
  </DropMenu.Option>
  <DropMenu.Option>
    heat
  </DropMenu.Option>
  <DropMenu.Option>
    hesitant
  </DropMenu.Option>
  <DropMenu.Option>
    hill
  </DropMenu.Option>
  <DropMenu.Option>
    home
  </DropMenu.Option>
  <DropMenu.Option>
    horn
  </DropMenu.Option>
  <DropMenu.Option>
    hospital
  </DropMenu.Option>
  <DropMenu.Option>
    hurt
  </DropMenu.Option>
  <DropMenu.Option>
    idea
  </DropMenu.Option>
  <DropMenu.Option>
    ill-informed
  </DropMenu.Option>
  <DropMenu.Option>
    immense
  </DropMenu.Option>
  <DropMenu.Option>
    imminent
  </DropMenu.Option>
  <DropMenu.Option>
    insect
  </DropMenu.Option>
  <DropMenu.Option>
    insurance
  </DropMenu.Option>
  <DropMenu.Option>
    intelligent
  </DropMenu.Option>
  <DropMenu.Option>
    iron
  </DropMenu.Option>
  <DropMenu.Option>
    jaded
  </DropMenu.Option>
  <DropMenu.Option>
    jagged
  </DropMenu.Option>
  <DropMenu.Option>
    jeans
  </DropMenu.Option>
  <DropMenu.Option>
    jelly
  </DropMenu.Option>
  <DropMenu.Option>
    judge
  </DropMenu.Option>
  <DropMenu.Option>
    kitty
  </DropMenu.Option>
  <DropMenu.Option>
    kneel
  </DropMenu.Option>
  <DropMenu.Option>
    knot
  </DropMenu.Option>
  <DropMenu.Option>
    knotty
  </DropMenu.Option>
  <DropMenu.Option>
    letter
  </DropMenu.Option>
  <DropMenu.Option>
    level
  </DropMenu.Option>
  <DropMenu.Option>
    lie
  </DropMenu.Option>
  <DropMenu.Option>
    lip
  </DropMenu.Option>
  <DropMenu.Option>
    literate
  </DropMenu.Option>
  <DropMenu.Option>
    loaf
  </DropMenu.Option>
  <DropMenu.Option>
    lovely
  </DropMenu.Option>
  <DropMenu.Option>
    madly
  </DropMenu.Option>
  <DropMenu.Option>
    meaty
  </DropMenu.Option>
  <DropMenu.Option>
    men
  </DropMenu.Option>
  <DropMenu.Option>
    merciful
  </DropMenu.Option>
  <DropMenu.Option>
    messy
  </DropMenu.Option>
  <DropMenu.Option>
    minister
  </DropMenu.Option>
  <DropMenu.Option>
    modern
  </DropMenu.Option>
  <DropMenu.Option>
    multiply
  </DropMenu.Option>
  <DropMenu.Option>
    muscle
  </DropMenu.Option>
  <DropMenu.Option>
    mysterious
  </DropMenu.Option>
  <DropMenu.Option>
    natural
  </DropMenu.Option>
  <DropMenu.Option>
    naughty
  </DropMenu.Option>
  <DropMenu.Option>
    neat
  </DropMenu.Option>
  <DropMenu.Option>
    note
  </DropMenu.Option>
  <DropMenu.Option>
    nut
  </DropMenu.Option>
  <DropMenu.Option>
    nutritious
  </DropMenu.Option>
  <DropMenu.Option>
    obedient
  </DropMenu.Option>
  <DropMenu.Option>
    obsolete
  </DropMenu.Option>
  <DropMenu.Option>
    old-fashioned
  </DropMenu.Option>
  <DropMenu.Option>
    onerous
  </DropMenu.Option>
  <DropMenu.Option>
    opposite
  </DropMenu.Option>
  <DropMenu.Option>
    order
  </DropMenu.Option>
  <DropMenu.Option>
    oval
  </DropMenu.Option>
  <DropMenu.Option>
    painstaking
  </DropMenu.Option>
  <DropMenu.Option>
    paint
  </DropMenu.Option>
  <DropMenu.Option>
    pale
  </DropMenu.Option>
  <DropMenu.Option>
    parallel
  </DropMenu.Option>
  <DropMenu.Option>
    parched
  </DropMenu.Option>
  <DropMenu.Option>
    park
  </DropMenu.Option>
  <DropMenu.Option>
    past
  </DropMenu.Option>
  <DropMenu.Option>
    pencil
  </DropMenu.Option>
  <DropMenu.Option>
    perfect
  </DropMenu.Option>
  <DropMenu.Option>
    permit
  </DropMenu.Option>
  <DropMenu.Option>
    phobic
  </DropMenu.Option>
  <DropMenu.Option>
    picture
  </DropMenu.Option>
  <DropMenu.Option>
    pin
  </DropMenu.Option>
  <DropMenu.Option>
    pink
  </DropMenu.Option>
  <DropMenu.Option>
    please
  </DropMenu.Option>
  <DropMenu.Option>
    plug
  </DropMenu.Option>
  <DropMenu.Option>
    pop
  </DropMenu.Option>
  <DropMenu.Option>
    possess
  </DropMenu.Option>
  <DropMenu.Option>
    preserve
  </DropMenu.Option>
  <DropMenu.Option>
    pretty
  </DropMenu.Option>
  <DropMenu.Option>
    print
  </DropMenu.Option>
  <DropMenu.Option>
    puffy
  </DropMenu.Option>
  <DropMenu.Option>
    pushy
  </DropMenu.Option>
  <DropMenu.Option>
    quarter
  </DropMenu.Option>
  <DropMenu.Option>
    race
  </DropMenu.Option>
  <DropMenu.Option>
    racial
  </DropMenu.Option>
  <DropMenu.Option>
    raise
  </DropMenu.Option>
  <DropMenu.Option>
    rampant
  </DropMenu.Option>
  <DropMenu.Option>
    rare
  </DropMenu.Option>
  <DropMenu.Option>
    record
  </DropMenu.Option>
  <DropMenu.Option>
    release
  </DropMenu.Option>
  <DropMenu.Option>
    retire
  </DropMenu.Option>
  <DropMenu.Option>
    rhetorical
  </DropMenu.Option>
  <DropMenu.Option>
    rhyme
  </DropMenu.Option>
  <DropMenu.Option>
    ring
  </DropMenu.Option>
  <DropMenu.Option>
    road
  </DropMenu.Option>
  <DropMenu.Option>
    rub
  </DropMenu.Option>
  <DropMenu.Option>
    rule
  </DropMenu.Option>
  <DropMenu.Option>
    savory
  </DropMenu.Option>
  <DropMenu.Option>
    scared
  </DropMenu.Option>
  <DropMenu.Option>
    screw
  </DropMenu.Option>
  <DropMenu.Option>
    seemly
  </DropMenu.Option>
  <DropMenu.Option>
    selfish
  </DropMenu.Option>
  <DropMenu.Option>
    shape
  </DropMenu.Option>
  <DropMenu.Option>
    shiver
  </DropMenu.Option>
  <DropMenu.Option>
    shrill
  </DropMenu.Option>
  <DropMenu.Option>
    sign
  </DropMenu.Option>
  <DropMenu.Option>
    signal
  </DropMenu.Option>
  <DropMenu.Option>
    silk
  </DropMenu.Option>
  <DropMenu.Option>
    silky
  </DropMenu.Option>
  <DropMenu.Option>
    silly
  </DropMenu.Option>
  <DropMenu.Option>
    simplistic
  </DropMenu.Option>
  <DropMenu.Option>
    sister
  </DropMenu.Option>
  <DropMenu.Option>
    skillful
  </DropMenu.Option>
  <DropMenu.Option>
    sleep
  </DropMenu.Option>
  <DropMenu.Option>
    small
  </DropMenu.Option>
  <DropMenu.Option>
    smash
  </DropMenu.Option>
  <DropMenu.Option>
    society
  </DropMenu.Option>
  <DropMenu.Option>
    sofa
  </DropMenu.Option>
  <DropMenu.Option>
    soggy
  </DropMenu.Option>
  <DropMenu.Option>
    song
  </DropMenu.Option>
  <DropMenu.Option>
    sound
  </DropMenu.Option>
  <DropMenu.Option>
    soup
  </DropMenu.Option>
  <DropMenu.Option>
    sparkling
  </DropMenu.Option>
  <DropMenu.Option>
    spiders
  </DropMenu.Option>
  <DropMenu.Option>
    spot
  </DropMenu.Option>
  <DropMenu.Option>
    stage
  </DropMenu.Option>
  <DropMenu.Option>
    standing
  </DropMenu.Option>
  <DropMenu.Option>
    stare
  </DropMenu.Option>
  <DropMenu.Option>
    steep
  </DropMenu.Option>
  <DropMenu.Option>
    stiff
  </DropMenu.Option>
  <DropMenu.Option>
    store
  </DropMenu.Option>
  <DropMenu.Option>
    stranger
  </DropMenu.Option>
  <DropMenu.Option>
    swanky
  </DropMenu.Option>
  <DropMenu.Option>
    taste
  </DropMenu.Option>
  <DropMenu.Option>
    tasteless
  </DropMenu.Option>
  <DropMenu.Option>
    tax
  </DropMenu.Option>
  <DropMenu.Option>
    telling
  </DropMenu.Option>
  <DropMenu.Option>
    territory
  </DropMenu.Option>
  <DropMenu.Option>
    third
  </DropMenu.Option>
  <DropMenu.Option>
    thirsty
  </DropMenu.Option>
  <DropMenu.Option>
    thumb
  </DropMenu.Option>
  <DropMenu.Option>
    tiny
  </DropMenu.Option>
  <DropMenu.Option>
    toe
  </DropMenu.Option>
  <DropMenu.Option>
    touch
  </DropMenu.Option>
  <DropMenu.Option>
    transport
  </DropMenu.Option>
  <DropMenu.Option>
    tremble
  </DropMenu.Option>
  <DropMenu.Option>
    trite
  </DropMenu.Option>
  <DropMenu.Option>
    twist
  </DropMenu.Option>
  <DropMenu.Option>
    two
  </DropMenu.Option>
  <DropMenu.Option>
    umbrella
  </DropMenu.Option>
  <DropMenu.Option>
    unkempt
  </DropMenu.Option>
  <DropMenu.Option>
    unlock
  </DropMenu.Option>
  <DropMenu.Option>
    unnatural
  </DropMenu.Option>
  <DropMenu.Option>
    unsightly
  </DropMenu.Option>
  <DropMenu.Option>
    uttermost
  </DropMenu.Option>
  <DropMenu.Option>
    wait
  </DropMenu.Option>
  <DropMenu.Option>
    walk
  </DropMenu.Option>
  <DropMenu.Option>
    wander
  </DropMenu.Option>
  <DropMenu.Option>
    warn
  </DropMenu.Option>
  <DropMenu.Option>
    weary
  </DropMenu.Option>
  <DropMenu.Option>
    wholesale
  </DropMenu.Option>
  <DropMenu.Option>
    willing
  </DropMenu.Option>
  <DropMenu.Option>
    winter
  </DropMenu.Option>
  <DropMenu.Option>
    worthless
  </DropMenu.Option>
  <DropMenu.Option>
    writer
  </DropMenu.Option>
  <DropMenu.Option>
    zippy
  </DropMenu.Option>
</DropMenu>
`;

exports[`Autocomplete [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<DropMenu
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={true}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control
    onClick={[Function]}>
    <div
      className="lucid-Autocomplete-Control lucid-Autocomplete-Control-is-disabled">
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={true}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text" />
    </div>
  </DropMenu.Control>
</DropMenu>
`;

exports[`Autocomplete [common] example testing should match snapshot(s) for 4.stateless 1`] = `
<DropMenu
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={2}
  isDisabled={false}
  isExpanded={true}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control
    onClick={[Function]}>
    <div
      className="lucid-Autocomplete-Control lucid-Autocomplete-Control-is-expanded">
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={false}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-match">
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      aft
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-match">
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      ounding
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-match">
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      rasive
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      accidental
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      actor
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      addition
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      adhesive
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      adjustment
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      advertisement
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      applaud
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      appreciate
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      awesome
    </span>
  </DropMenu.Option>
  <DropMenu.Option>
    <span
      className="lucid-Autocomplete-Option-suggestion-match">
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post">
      racadabra alakazam hocus pocus shazam say the magic word please if you will thank you very much
    </span>
  </DropMenu.Option>
</DropMenu>
`;
